Add animate helper for single component animation

--- a/test/index.coverage.html
+++ b/test/index.coverage.html
@@ -22,6 +22,7 @@
   <script src="../dist/test-iife/triggers/setNavigationTriggers.js"></script>
   <script src="../dist/test-iife/triggers/popstate.js"></script>
   <script src="../dist/test-iife/triggers/click.js"></script>
+  <script src="../dist/test-iife/transitions/animate.js"></script>
 </head>
 
 <body>
