Create animated transitions module, update tests and demos

--- a/demo/demo-elements/x-image-view.html
+++ b/demo/demo-elements/x-image-view.html
@@ -1,6 +1,10 @@
 <dom-module id="x-image-view">
   <template preserve-content>
     <style>
+      host {
+        display: block;
+      }
+
       div {
         background: hotpink;
       }
