--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -7,6 +7,7 @@
 <link rel="import" href="element-demo.html">
 
 <script src="../dist/vaadin-router.umd.js"></script>
+<script src="../dist/transitions.umd.js"></script>
 
 <link rel="import" href="demo-elements/x-home-view.html">
 <link rel="import" href="demo-elements/x-image-view.html">
