--- a/test/index.coverage.html
+++ b/test/index.coverage.html
@@ -23,6 +23,7 @@
   <script src="../dist/test-iife/triggers/popstate.js"></script>
   <script src="../dist/test-iife/triggers/click.js"></script>
   <script src="../dist/test-iife/transitions/animate.js"></script>
+  <script src="../dist/test-iife/transitions/batch.js"></script>
 </head>
 
 <body>
