--- a/test/router/dynamic.redirect.spec.html
+++ b/test/router/dynamic.redirect.spec.html
@@ -6,6 +6,7 @@
   <script src="../../bower_components/web-component-tester/browser.js"></script>
   <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <script src="../../dist/vaadin-router.umd.js"></script>
+  <script src="test-utils.js"></script>
 
   <link rel="import" href="../test-pushstate-throttler.html">
 </head>
@@ -58,7 +59,7 @@
 
           await router.render('/');
 
-          verifyActiveRoutes(router, ['/a', '/b', '/c']);
+          window.VaadinTestNamespace.verifyActiveRoutes(router, ['/a', '/b', '/c']);
         });
 
         it('action that returns custom component activates route', async() => {
@@ -79,14 +80,10 @@
 
           await router.render('/');
 
-          verifyActiveRoutes(router, ['/a']);
+          window.VaadinTestNamespace.verifyActiveRoutes(router, ['/a']);
           expect(outlet.children[0].tagName).to.match(/x-users-view/i);
         });
       });
     });
-
-    function verifyActiveRoutes(router, expectedSegments) {
-      expect(router.__previousContext.chain.map(route => route.path)).to.deep.equal(expectedSegments);
-    }
   </script>
 </body>
