Fix incorrect method call.

--- a/test/router/dynamic.redirect.spec.html
+++ b/test/router/dynamic.redirect.spec.html
@@ -69,7 +69,7 @@
 
           await router.render('/');
 
-          verifyActiveRoutes(router, ['/']);
+          window.VaadinTestNamespace.verifyActiveRoutes(router, ['/']);
         });
 
         it('action that returns redirect activates redirect route', async() => {
