--- a/test/router/lifecycle-events.spec.html
+++ b/test/router/lifecycle-events.spec.html
@@ -16,6 +16,8 @@
   <div id="outlet"></div>
 
   <script>
+    const {verifyActiveRoutes} = VaadinTestNamespace;
+
     class XSpy extends HTMLElement {
       constructor() {
         super();
@@ -129,7 +131,7 @@
           await router.render('/');
 
           expect(outlet.children[0].tagName).to.match(/x-users-list/i);
-          window.VaadinTestNamespace.verifyActiveRoutes(router, ['/users']);
+          verifyActiveRoutes(router, ['/users']);
         });
 
         it('should be able to return a `redirect` result to redirect navigation', async() => {
@@ -141,7 +143,7 @@
           await router.render('/');
 
           expect(outlet.children[0].tagName).to.match(/x-users-list/i);
-          window.VaadinTestNamespace.verifyActiveRoutes(router, ['/users']);
+          verifyActiveRoutes(router, ['/users']);
         });
 
         it('should ignore any other return value than `cancel` or `redirect`', async() => {
@@ -168,7 +170,7 @@
 
             await router.render('/');
             expect(outlet.children[0].tagName).to.match(/x-home-view/i);
-            window.VaadinTestNamespace.verifyActiveRoutes(router, ['/']);
+            verifyActiveRoutes(router, ['/']);
           }
         });
 
@@ -280,7 +282,7 @@
           await router.render('/users');
 
           expect(outlet.children[0].tagName).to.match(/x-home-view/i);
-          window.VaadinTestNamespace.verifyActiveRoutes(router, ['/']);
+          verifyActiveRoutes(router, ['/']);
         });
 
         it('should ignore any other return value than `cancel`', async() => {
@@ -309,7 +311,7 @@
             await router.render('/');
             await router.render('/users');
             expect(outlet.children[0].tagName).to.match(/x-users-list/i);
-            window.VaadinTestNamespace.verifyActiveRoutes(router, ['/users']);
+            verifyActiveRoutes(router, ['/users']);
           }
         });
 
@@ -436,7 +438,7 @@
             await router.render('/');
             await router.render('/users');
             expect(outlet.children[0].tagName).to.match(/x-users-list/i);
-            window.VaadinTestNamespace.verifyActiveRoutes(router, ['/users']);
+            verifyActiveRoutes(router, ['/users']);
           }
         });
 
