Extract common test method to test-utils.js (#163)

--- a/test/router/dynamic.redirect.spec.html
+++ b/test/router/dynamic.redirect.spec.html
@@ -6,6 +6,7 @@
   <script src="../../bower_components/web-component-tester/browser.js"></script>
   <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <script src="../../dist/vaadin-router.umd.js"></script>
+  <script src="test-utils.js"></script>
 
   <link rel="import" href="../test-pushstate-throttler.html">
 </head>
@@ -20,6 +21,8 @@
 
   <script>
     describe('Vaadin.Router', function() {
+      const {verifyActiveRoutes} = VaadinTestNamespace;
+
       // eslint-disable-next-line no-invalid-this
       const suite = this;
       suite.title = suite.title + (window.ShadyDOM ? ' (Shady DOM)' : '');
@@ -84,9 +87,5 @@
         });
       });
     });
-
-    function verifyActiveRoutes(router, expectedSegments) {
-      expect(router.__previousContext.chain.map(route => route.path)).to.deep.equal(expectedSegments);
-    }
   </script>
 </body>
